--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -73,7 +73,7 @@
     text-align: left;
 }
 
-.recital-title {
+.coverflow-recital-title {
     padding: 0.5rem;
     font-size: x-large;
     font-weight: bolder;
