--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -5,6 +5,8 @@
     border-top: 3px solid #28B1BF;
     background: linear-gradient(to bottom, $darken-50, transparent);
     box-shadow: 0 1px 1px $lighter-30 inset;
+    position: relative;
+    z-index: 1;
     
     @include media-mobile {
         border-top: 2px solid #28B1BF;
@@ -26,10 +28,13 @@
     ul.topbar-menu {
         margin: 0;
         font-size: 0;
+        padding: 0;
         li {
             list-style: none;
             display: inline-block;
             font-size: 1rem;
+            position: relative;
+            
             .topbar-item-body {
                 display: inline-block;
                 padding: 2rem;
@@ -37,7 +42,7 @@
                 text-decoration: none;
                 font-size: larger;
                 border-radius: 0 0 2px 2px;
-                border-left: 1px solid #333;
+                box-shadow: -1px 0 0 #333;
                 
                 &:hover {
                     // background-color: $lighter-20;
@@ -50,5 +55,72 @@
                 }
             }
         }
+        
+        &.nav-bar-profile-menu-active .nav-bar-profile-btn {
+            background: linear-gradient(to bottom, $lighter-40, $lighter-30);
+            border-radius: 0;
+        }
     }
+    
+    .topbar-avatar {
+        border-radius: 50%;
+        // height: 1rem;
+        height: 3rem;
+        margin: -1rem;
+        @include media-mobile {
+            height: 2rem;
+            margin: -0.5rem;
+            margin-right: 0;
+        }
+        margin-right: 0;
+    }
+    
+    ul.nav-bar-profile-menu {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        position: absolute;
+        right: 0;
+        box-sizing: border-box;
+        
+        background: linear-gradient(to bottom, #6d6d6d 0, #999 100%);
+        color: #aaa;
+        box-shadow: 0 1em 3em $darken-50;
+        border-radius: 0 0 3px 3px;
+        text-align: center;
+        min-width: 100%;
+        overflow: hidden;
+        
+        @include media-mobile {
+            border-radius: 0;
+            text-align: center;
+            border-top: 1px solid #888;
+        }
+        
+        z-index: -1;
+        opacity: 0;
+        transition: all 0.2s ease-in-out;
+        visibility: hidden;
+        
+        & > li {
+            display: block;
+            & > * {
+                display: block;
+                min-width: 100%;
+                @include media-mobile {
+                    min-width: 100vw; }
+                padding: 0.6em 1.2em;
+                box-sizing: border-box;
+                
+                &:hover {
+                    background: #28B1BF;
+                    color: #fff;
+                    text-shadow: 0 -1px $darken-40;
+                    border-radius: 1px;
+                }
+            }
+            & > a { text-decoration: none; }
+        }
+    }
+    
 }
