--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -3,10 +3,10 @@
 @import 'essential';
 
 .profile-form {
-    background-color: #181818;
-    border-radius: 6px;
-    padding: 1em;
-    margin: 1em 0;
+    // background-color: #181818;
+    // border-radius: 6px;
+    // padding: 1em;
+    // margin: 1em 0;
     
     @include media-mobile {
         padding: 1em 0;
