--- a/app/assets/stylesheets/_assets.scss.erb
+++ b/app/assets/stylesheets/_assets.scss.erb
@@ -1,7 +1,7 @@
 
 @import "cd";
 
-html {
+.page-wrapper {
     background: url(<%= asset_path 'noise.png' %>) repeat 0 0, 
         linear-gradient(to bottom, #333 0, #222 70%, #1B1D20 90%, #0B0B0B 100%);
 }
