--- a/app/assets/stylesheets/animenz.scss
+++ b/app/assets/stylesheets/animenz.scss
@@ -34,12 +34,33 @@ a {
 
 html {
 	background-color: #ccc;
-    // background: url(/static/images/noise.png) repeat 0 0, linear-gradient(-180deg, #354149 0%, #1D252A 18%, #1C1C1C 36%, #111 70%, #000 81%, #000000 100%);
-    // background-size: 100%;
-	// background-size: cover;
     font-size: 12px;
-    min-height: 100%;
+    height: 100%;
     color: white;
+}
+
+body {
+    height: 100%;
+    box-sizing: border-box;
+    .page-wrapper {
+        min-height: 100%;
+        height: auto !important;
+        height: 100%;
+        margin: 0 auto -5em;
+    }
+}
+
+.footer-push { height: 6em; }
+
+.footer {
+	height: 5em;
+    width: 100%;
+    box-sizing: border-box;
+	text-align: center;
+	color: #444;
+    padding: 1em;
+    background: black;
+    border-top: 1px solid #222;
 }
 
 .index-main {
@@ -165,17 +186,6 @@ html {
 
 }
 
-.footer {
-	margin-top: 2em;
-	text-align: center;
-	color: #444;
-    padding: 1em;
-    border-top: 2px solid #aaa;
-    border-bottom: 2px solid #aaa;
-    background: #181818;
-    box-shadow: 0 -4px 6px $lighter-20;
-}
-
 input[type="text"],
 input[type="email"],
 input[type="password"] {
@@ -232,9 +242,7 @@ input[type="password"] {
         gZD0nTTAgMEw4IDhaTTggMEwwIDhaJyBzdHJva2Utd2lkdGg9JzAu
         NScgc3Ryb2tlPScjMzMzJy8+Cjwvc3ZnPg==");
     background-repeat: repeat;
-    & > p, & > h3 {
-        display: inline-block;
-    }
+    & > p, & > h3 { display: inline-block; }
 }
 
 .header-logo {
