--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,8 @@
 <!-- Footer -->
 <footer>
 	<div class="footer">
-		蜀ICP备16047394号-1
+		<div class="float-left">© 2016 Animenz</div>
+        蜀ICP备16047394号-1
 	</div>
 </footer>
 <!-- /.container -->
