--- a/app/assets/stylesheets/animenz.scss
+++ b/app/assets/stylesheets/animenz.scss
@@ -50,7 +50,10 @@ body {
     }
 }
 
-.footer-push { height: 6em; }
+.footer-push {
+    height: 5em;
+    clear: both;
+}
 
 .footer {
 	height: 5em;
@@ -63,145 +66,24 @@ body {
     border-top: 1px solid #222;
 }
 
-.index-main {
-	display: flex;
-    text-align: left;
-	box-shadow: 0 0px 48px $darken-30;
-
-    @include mq($until: tablet) {
-        flex-direction: column-reverse;
-    }
-
-	.index-lst-show {
-		list-style: none;
-        flex-grow: 1;
-		min-width: 16rem;
-		padding: 0;
-		margin: 0;
-		display: flex;
-        flex-wrap: nowrap;
-		flex-direction: column;
-        @include mq($until: tablet) {
-            flex-wrap: wrap;
-            flex-direction: row;
-        }
-
-        li {
-            flex-grow: 1;
-            flex-basis: 50%;
-            display: flex;
-        }
-
-		.show {
-            width: 100%;
-            display: block;
-            position: relative;
-            box-shadow: 0 1px 1px $lighter-30 inset;
-            box-sizing: border-box;
-            background-image: linear-gradient(180deg, #505057 0%, #313136 100%);
-			padding: 0.5em;
-			padding-left: 1em;
-            text-shadow: 0px 1px 1px black;
-            overflow: auto;
-
-            text-decoration: none;
-			.show-title {
-				margin: 0.4em 0;
-			}
-			p {
-				margin: 0.3em 0;
-			}
-			border-top: solid 1px black;
-            
-            @include mq($until: tablet) {
-                min-width: 50%; }
-            
-            &:hover {
-                
-                box-shadow: 0 8px 18px $darken-30 inset, 0 -1px 1px $lighter-30 inset;
-                border-top: solid 1px gray;
-            
-                &:after {
-                    top: 0%;
-                    left: -50%;
-                    content: '';
-                    position: absolute;
-                    width: 100%;
-                    height: 100%;
-                    border-radius: 50%;
-                    background: radial-gradient(ellipse, $lighter-30, transparent 60%);
-                }
-            }
-		}
-	}
-
-	.index-pic-cont {
-		// background-color: red;
-        position: relative;
-        overflow: hidden;
-        @include user-select(none);
-        
-        &:after {
-            @include pseudo-cover-all;
-            box-shadow: 0 0 48px $darken-70 inset, 0 0 12px $darken-30;
-            // it prevents touch events of slides from triggering 
-            pointer-events: none;  
-        }
-
-        .pic-slide-cont {
-            // make the pictures layout in one row
-            //  and eliminate the space between inline-blocks
-            white-space: nowrap;
-            font-size: 0;
-            .pic-slide-section {
-                // float: left;
-                position: relative;
-                display: inline-block;
-            }
-        }
-
-		img {
-            vertical-align: middle;
-            z-index: -4;
-            width: 100%;
-			// max-width: 100%;
-		}
-        
-        .index-pic-bar {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            text-align: center;
-            margin-bottom: 1em;
-            text-shadow: 0 0 3px #333;
-            cursor: default;
-            
-            .index-pic-bar-indicators {
-                & .index-pic-bar-indicator-active {
-                    & > i:before { content: "\f111"; }
-                }
-            }
-        }
-	}
-
-}
-
 input[type="text"],
 input[type="email"],
 input[type="password"] {
-    border-radius: 2px;
+    border-radius: 1px;
     // box-shadow: inset 1px 1px 4px $darken-20;
+    box-shadow: inset 0 1px 1px $darken-20;
     padding: .5em;
     border: 1px solid #CCC;
-    color: #333;
+    color: #666;
 }
 
 .button {
     border: none;
     color: white;
-    border-radius: 1px;
+    border-radius: 3px;
     background: #12B2B2;
-    padding: .5em 1.4em;
+    padding: .7em 1.8em;
+    box-shadow: 0 0 1px 1px $darken-30 inset;
 }
 
 .login-container {
@@ -218,10 +100,9 @@ input[type="password"] {
     }
     margin: 0 auto;
     & > .form-group {
-        margin: 1em 0;
-        
         input {
             width: 100%;
+            margin: 0.5em 0;
             box-sizing: border-box;
         }
     }
@@ -328,6 +209,39 @@ input[type="password"] {
         border-radius: 2px;
         background-color: #d0d0d0;
         padding: 1em;
+    }
+}
+
+.top-msgs {
+    text-align: center;
+}
+
+.top-msg {
+    color: white;
+    padding: 0.6em 1em;
+    display: inline-block;
+    background: #666;
+    border-radius: 4em;
+    box-sizing: border-box;
+
+    & > * {
+        display: inline-block;
+    }
+
+    @include media-mobile {
+        width: 100%; }
+
+    button {
+        padding: 0;
+        border-radius: 50%;
+        width: 1.5em;
+        height: 1.5em;
+        line-height: 0.5em;
+
+        background: linear-gradient(to bottom, $lighter-30, $lighter-50);
+        box-shadow: none;
+        color: #444;
+        border: none;
     }
 }
 
