--- a/app/assets/stylesheets/_cd.scss
+++ b/app/assets/stylesheets/_cd.scss
@@ -1,4 +1,5 @@
 
+$lighter-2: rgba(255, 255, 255, 0.02);
 $lighter-5: rgba(255, 255, 255, 0.05);
 $lighter-10: rgba(255, 255, 255, 0.1);
 $lighter-20: rgba(255, 255, 255, 0.2);
@@ -9,6 +10,7 @@ $lighter-60: rgba(255, 255, 255, 0.6);
 $lighter-80: rgba(255, 255, 255, 0.8);
 $lighter-90: rgba(255, 255, 255, 0.9);
 
+$darken-2: rgba(0, 0, 0, 0.02);
 $darken-5: rgba(0, 0, 0, 0.05);
 $darken-10: rgba(0, 0, 0, 0.1);
 $darken-20: rgba(0, 0, 0, 0.2);
