--- a/app/views/layouts/_nav_links_for_auth.html.erb
+++ b/app/views/layouts/_nav_links_for_auth.html.erb
@@ -15,7 +15,7 @@
     <% end %>
     <li><%= link_to '个人信息', edit_user_registration_path %></li>
     <li><%= link_to '订单列表', orders_path %></li>
-    <li><%= link_to '退出登录', destroy_user_session_path, :method => 'delete' %></li>
+    <li><%= link_to '退出登录', destroy_user_session_path, method: :delete %></li>
     <li class="hide-desktop">
         <a href="#" class="align-center nav-bar-profile-show-btn">
             <i class="fa fa-lg fa-angle-up"></i>
