Add zh-CN locale in app

--- a/app/views/admin/applications/new.html.erb
+++ b/app/views/admin/applications/new.html.erb
@@ -20,7 +20,7 @@ to do the heavy lifting.
 <header class="header">
   <h1 class="header-heading"><%= content_for(:title) %></h1>
   <div class="header-actions">
-    <%= link_to 'Back', :back, class: "button" %>
+    <%= link_to '后退', :back, class: "button" %>
   </div>
 </header>
 
