--- a/app/views/admin/recitals/show.html.erb
+++ b/app/views/admin/recitals/show.html.erb
@@ -22,7 +22,7 @@ as well as a link to its edit page.
   <h1 class="header-heading"><%= content_for(:title) %></h1>
   <div class="header-actions">
     <%= link_to(
-      "Edit",
+      "编辑",
       [:edit, Administrate::NAMESPACE, page.resource],
       class: "button",
     ) %>
@@ -41,7 +41,7 @@ as well as a link to its edit page.
     <%= image_tag page.resource.venue_image.url, width: '300' %>
     <%= form_for [Administrate::NAMESPACE, page.resource] do |f| %>
       <%= f.file_field :venue_image %>
-      <%= f.submit value: 'Update Venue Image' %>
+      <%= f.submit value: '更新场馆图' %>
     <% end %>
   </dd>
   <dt class="attribute-label">POSTER</dt>
@@ -49,7 +49,7 @@ as well as a link to its edit page.
     <%= image_tag page.resource.poster.url, width: '300' %>
     <%= form_for [Administrate::NAMESPACE, page.resource] do |f| %>
       <%= f.file_field :poster %>
-      <%= f.submit value: 'Update Poster' %>
+      <%= f.submit value: '更新海报' %>
     <% end %>
   </dd>
 </dl>
