Add price table

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -23,7 +23,7 @@
                     <th>1</th>
                     <td><%= seat.area.recital.city %>站</td>
                     <td><%= seat.area.name %></td>
-                    <th>￥<%= seat.area.price %></th>
+                    <th>￥<%= seat.price.price %></th>
                 </tr>
                 <% end %>
             </tbody>
